test_programs/compile_failure/bool_math/src/main.nr
fn main() {
    let _ = true + true;
    let _ = true - true;
    let _ = true * true;
    let _ = true / true;
    let _ = true % true;
    let _ = true >> true;
    let _ = true << true;
}
